--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img alt="placeholder" class="img-polaroid" src="http://placehold.it/480x300">
+          <img alt="Exemplo" class="img-polaroid" src="images/poema11.png">
         </div>
         <div class="span5 copy">
           <p>
