--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button" data-code="04987ed7c01510ef33ffcacd9a9b7b61" data-button-style="custom_small" href="https://coinbase.com/checkouts/04987ed7c01510ef33ffcacd9a9b7b61">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
